[tool.poetry]
name = "ansible-docker-testing-lab"
version = "0.1.0"
description = ""
authors = ["augustovictor <victor.costa@loft.com.br>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
